// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Links IconLink should match snapshot 1`] = `
<NavLink
  activeClassName="active"
  ariaCurrent="true"
  className="icon-link"
  exact={true}
  to="/"
>
  <Component />
</NavLink>
`;

exports[`Links TabLink should match snapshot 1`] = `
<NavLink
  activeClassName="active"
  ariaCurrent="true"
  className="tab-link"
  exact={true}
  to="/"
>
  <Component />
</NavLink>
`;
